--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,5 +1,5 @@
 <div class="row m-1">
-    <div *ngFor="let member of members" class="col-2">
+    <div *ngFor="let member of members$ | async" class="col-2">
         <app-member-card [member]="member"></app-member-card>
     </div>
 </div>
