--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -26,7 +26,7 @@
       <div class="dropdown" dropdown *ngIf="(accountService.currentUser$ | async) as user">
           <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{ user.username | titlecase }}</a>
           <div class="dropdown-menu" *dropdownMenu>
-              <a class="dropdown-item">Edit Profile</a>
+              <a routerLink="/member/edit" class="dropdown-item">Edit Profile</a>
               <a class="dropdown-item" (click)="logout()">Logout</a>
           </div>
       </div>
